# taskbot

./: .env_example  .gitignore  LICENSE  README.md  builder.py  config.py  main.py  pyproject.toml  visualize.py
alembic/: env.py
alembic/versions/: 8af5c8e56ac9_added_notify_status.py  9a90e0727887_remove_due_date_and_add_task_status.py  daf380571cc6_initial_db.py
assistant/: assistant_base.py  primary_assistant.py  task_assistant.py
core/: config.py  state.py
data/: chroma.sqlite3
db/: __init__.py  db.py  eisenhower_cat.py  scheduler.py  tasks.py
schema/: ToTaskAssistant.py
telegram/: bot.py
tool/: priority_matrix.py  tasks.py
utils/: priority_matrix.py  utils.py  vector_search.py
